# 2D-Game-Pikuma

./: 2D-Game-Pikuma.sln  2D-Game-Pikuma.vcxproj  CMakeLists.txt  README.md  Taskfile.yml  main.cpp
2D-Game-Pikuma/: 2D-Game-Pikuma.vcxproj
CPP_Game/: CMakeLists.txt
scripts/: build.ps1
x64/Debug/: 2D-Game-Pikuma.exe.recipe  2D-Game-Pikuma.ilk  2D-Game-Pikuma.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/2D-Game-Pikuma.tlog/: 2D-Game-Pikuma.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
